--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.1.3
   http: ^0.13.5
   sqflite: ^2.2.2
+  search_page: ^2.2.0
 
 dev_dependencies:
   flutter_test:
